--- a/Decred Wallet/en.lproj/Localizable.strings
+++ b/Decred Wallet/en.lproj/Localizable.strings
@@ -14,6 +14,7 @@
 "restoreExistingWallet" = "Restore Existing \n Wallet";
 "createOrRecoverWallet" = "Create or recover your wallet and \nstart managing your decred.";
 "wallet" = "Wallet";
+"walletCreated" = "Wallet Created";
 
 /* Create New Wallet(Seed display view) */
 "settingUpYourWallet" = "Setting Up Decred Wallet";
